src/pages/HomePage.module.css
.homePage{
  height: 100%;
  width: 100%;

  display: flex;
  flex-direction: row;
  align-items: stretch;
  justify-content: stretch;

  color: var(--color-text);
}

.navbar {
  background-color: var(--color-secondary);

  width: 250px;
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;

  gap: 10px;
  padding: 10px;
  padding-top: 30px;

  img {
    max-width: 100%;
    object-fit: contain;
  }

  .email {
    color: var(--color-text-contrast);
    font-weight: bold;
  }
}

.navContainer {
  width: 100%;
  height: 100%;

  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-between;
}

.navButtonContainer {
  width: 100%;

  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: start;

  gap: 10px;

  button {
    background-color: var(--color-accent);
    color: var(--color-text);
    padding: 10px;
    transition: background-color 0.1s ease, color 0.1s ease;
    font-family: 'Open Sans', sans-serif;
    &:hover {
      background-color: var(--color-accent-select);
    }

    &.logoutButton {
      background-color: var(--color-secondary-dull);
      color: var(--color-text-contrast);

      &:hover {
        background-color: var(--color-secondary-select);
      }
    }
  }
}

.panelContainer {
  width: 100%;
  overflow-y: auto;
}

